<resources>
    <string name="title_home">Home</string>
    <string name="title_calculator">Calculator</string>
    <string name="title_stats">Stats</string>
    <string name="title_diary">Diary</string>
    <string name="example_product">Example Product</string>
    <string name="example_producer">Example Producer</string>
    <string name="app_name">DiabeticToolbox</string>
    <string name="add_user">Add User </string>
    <string name="hint_user">User…</string>
    <string name="button_save">Save</string>
    <string name="button_next">Next</string>
    <string name="home_tab">Home </string>
    <string name="calc_tab">Calculator</string>
    <string name="stats_tab">Stats</string>
    <string name="diary_tab">Diary</string>
    <string name="empty_not_saved">User not saved because it is empty.</string>
    <string name="search_product">Search product…</string>
    <string name="macro_carbs">Carbohydrates: </string>
    <string name="macro_fat">Fat: </string>
    <string name="macro_proteins">Proteins: </string>
    <string name="macro_carbs_exchanger">WW: </string>
    <string name="macro_fat_exchanger">WBT: </string>
    <string name="common_value_kcal">0 kcal </string>
    <string name="common_value_min">0 min </string>
    <string name="common_value_units">0 units </string>
    <string name="common_value_gram">0 g </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_product_sign">Add product sign</string>
    <string name="delete_product_sign">Delete product sign</string>
    <string name="example_serving_size">Serving Size</string>
    <string name="serving_size_quantity">gram/ml</string>
    <string name="save_button">Save button</string>
    <string name="product_serving_size">g/ml</string>
    <string name="save_training_button">Save Training</string>
    <string name="delete_meal_button">Delete Meal</string>
    <string name="type_a_date">Type a date</string>
    <string name="macro_calories">Calories:</string>
    <string name="meal_image_view">Meal</string>
    <string name="date">Date</string>
    <string name="image_view_exercises">Exercises</string>
    <string name="macro_calories_burned">Calories burned:</string>
    <string name="macro_carb_exchangers_used">WW used:</string>
    <string name="image_view_glucose">Glucose measurements</string>
    <string name="glucose_measurements_taken">Measurements taken:</string>
    <string name="common_numeric_value_int">0</string>
    <string name="glucose_measurements_hyperglycemia">Hyperglycemia:</string>
    <string name="glucose_measurements_standard">Standard:</string>
    <string name="glucose_measurements_hypoglycemia">Hypoglycemia:</string>
    <string name="food_tab">Food</string>
    <string name="exercises_tab">Exercises</string>
    <string name="glycemia_tab">Glycemia</string>
    <string name="search_exercise">Search exercise...</string>
    <string name="meal_summary">Meal Summary</string>
    <string name="exercises_summary">Exercises Summary</string>
    <string name="cardio_time_spent">Total time:</string>
    <string name="example_exercise">Example Exercise</string>
    <string name="title_food">Food</string>
    <string name="title_exercises">Exercises</string>
    <string name="exercise_duration">Duration:</string>
    <string name="exercise_duration_abbr">minutes</string>
    <string name="title_exercise_summary">Exercise Summary</string>
    <string name="title_product_summary">Product Summary</string>
    <string name="title_glycemia">Glycemia</string>
    <string name="delete_meal_training">Delete Training</string>
    <string name="edit_exercise_image">Edit exercise</string>
    <string name="delete_exercise_sign">Delete exercise</string>
    <string name="macro_fat_exchangers_used">WBT used:</string>
    <string name="time">Time</string>
    <string name="glycemia">Glycemia:</string>
    <string name="glycemia_unit">mg/dL</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button_cancel">CANCEL</string>
    <string name="proceed">Proceed</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="weight">Weight</string>
    <string name="button_back">Back</string>
    <string name="macro_calories_burned_shortcut">Kcal burned:</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="button_update">Update</string>
    <string name="update_username">New username</string>
    <string name="update_weight">New weight</string>

</resources>