<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home_tab"/>
    <item
        android:id="@+id/navigation_food"
        android:enabled="true"
        android:icon="@drawable/ic_save_meal"
        android:title="@string/food_tab"/>
    <item
        android:id="@+id/navigation_exercises"
        android:enabled="true"
        android:icon="@drawable/ic_exercises"
        android:title="@string/exercises_tab"/>
    <item
        android:id="@+id/navigation_measurements"
        android:enabled="true"
        android:icon="@drawable/ic_glucose"
        android:title="@string/measurements_tab"/>
    <item
        android:id="@+id/navigation_diary"
        android:enabled="true"
        android:icon="@drawable/ic_diary"
        android:title="@string/diary_tab"/>
<!--    <item
        android:id="@+id/navigation_stats"
        android:enabled="true"
        android:icon="@drawable/ic_stats"
        android:title="@string/stats_tab"/>-->
</menu>