<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_example_exercise_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="Example Exercise"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_edit_example_exercise"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/edit_exercise_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView_delete_example_exercise"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <ImageView
            android:id="@+id/imageView_delete_example_exercise"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/delete_exercise_sign"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@android:drawable/ic_menu_delete" />

        <TextView
            android:id="@+id/textView_example_exercise_calories_burned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/macro_calories_burned"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_example_exercise_name" />

        <TextView
            android:id="@+id/textView_example_exercise_calories_burned_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/common_value_units"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_example_exercise_calories_burned"
            app:layout_constraintStart_toEndOf="@+id/textView_example_exercise_calories_burned" />

        <TextView
            android:id="@+id/textView_example_exercise_carbohydrate_exchangers_used"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/macro_carb_exchangers_used"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_example_exercise_calories_burned" />

        <TextView
            android:id="@+id/textView_example_exercise_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/exercise_duration"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_example_exercise_carbohydrate_exchangers_used" />

        <TextView
            android:id="@+id/textView_example_exercise_carbohydrate_exchangers_used_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_value_units"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_example_exercise_carbohydrate_exchangers_used"
            app:layout_constraintStart_toStartOf="@+id/textView_example_exercise_calories_burned_value" />

        <TextView
            android:id="@+id/textView_example_exercise_duration_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_value_min"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_example_exercise_duration"
            app:layout_constraintStart_toStartOf="@+id/textView_example_exercise_carbohydrate_exchangers_used_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>