<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kucharzyk.diabetictoolboxjetpack.ui_and_data.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />
    <fragment
        android:id="@+id/navigation_food"
        android:name="com.kucharzyk.diabetictoolboxjetpack.ui_and_data.food.FoodFragment"
        android:label="@string/title_calculator"
        tools:layout="@layout/food_fragment" >
        <action
            android:id="@+id/action_navigation_calculator_to_productSummaryFragment"
            app:destination="@id/productSummaryFragment" />
        <action
            android:id="@+id/action_navigation_calculator_to_mealSummary"
            app:destination="@id/mealSummary" />
    </fragment>
    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.kucharzyk.diabetictoolboxjetpack.ui_and_data.stats.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/stats_fragment" />
    <fragment
        android:id="@+id/navigation_diary"
        android:name="com.kucharzyk.diabetictoolboxjetpack.ui_and_data.diary.DiaryFragment"
        android:label="@string/title_diary"
        tools:layout="@layout/diary_fragment" />
    <fragment
        android:id="@+id/productSummaryFragment"
        android:name="com.kucharzyk.diabetictoolboxjetpack.ui_and_data.food.ProductSummaryFragment"
        android:label="Product Summary">
        <argument
            android:name="ParcelizedProduct"
            app:argType="com.kucharzyk.diabetictoolboxjetpack.room_database.Product" />
        <action
            android:id="@+id/action_productSummaryFragment_to_navigation_calculator"
            app:destination="@id/navigation_food" />
        <action
            android:id="@+id/action_productSummaryFragment_to_mealSummary"
            app:destination="@id/mealSummary" />
        <argument
            android:name="position"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/mealSummary"
        android:name="com.kucharzyk.diabetictoolboxjetpack.ui_and_data.food.MealSummaryFragment"
        android:label="Meal Summary"
        tools:layout="@layout/fragment_meal_summary">
        <action
            android:id="@+id/action_mealSummary_to_navigation_calculator"
            app:destination="@id/navigation_food" />
        <action
            android:id="@+id/action_mealSummary_to_productSummaryFragment"
            app:destination="@id/productSummaryFragment" />
    </fragment>
</navigation>